--- a/style.css
+++ b/style.css
@@ -6,8 +6,59 @@
 body{
     /* background-color:rgba(128, 128, 128, 0); */
     background-color: rgb(71, 71, 71);
+    
 }
 
 .navcu{
-    background-color: rgb(0, 0, 0);
+    background-color: black;
+}
+
+.logo-bordercu{
+    border: 1px solid rgb(0, 250, 0);
+}
+
+.navbar-toggler{
+    width: 47px;
+    height: 34px;
+    background-color: black;
+    border:1px solid rgb(0, 250, 0);
+}
+.navbar-toggler .line{
+    width: 100%;
+    float: left;
+    height: 2px;
+    background-color: rgb(0, 250, 0);
+    margin-bottom: 5px;
+}
+
+.nav-link{
+    color: rgb(0, 250, 0);
+    border: 1px solid rgb(0, 250, 0);
+    
+}
+
+.nav-link:hover{
+    background-color: purple;
+}
+
+.form-control{
+    color: rgb(0, 250, 0);
+    background-color: black;
+    border: 1px solid rgb(0, 250, 0);
+}
+
+.btn{
+    color: rgb(0, 250, 0);
+    background-color: black;
+    border: 1px solid rgb(0, 250, 0);
+}
+
+.btn:hover{
+    background-color: purple;
+}
+
+@media screen and (max-width:992px){
+    .dlgnone{
+        display: none;
+    }
 }
